[package]
name = "screenprints"
# Remember to also update in appveyor.yml
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "reprints for your terminal screen"
documentation = "https://softprops.github.io/screenprints"
homepage = "https://github.com/softprops/screenprints"
repository = "https://github.com/softprops/screenprints"
keywords = ["terminal", "tui", "console"]
license = "MIT"

[dependencies]
kernel32-sys = "0.2"
winapi = "0.2"
